--- a/SlateBoard.App/Views/SlateView.xaml
+++ b/SlateBoard.App/Views/SlateView.xaml
@@ -4,14 +4,45 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:SlateBoard.App.ViewModels"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behaviours="clr-namespace:SlateBoard.App.Behaviours"
+             xmlns:cm="http://caliburnmicro.com"
              d:DataContext="{d:DesignInstance Type=viewModels:SlateViewModel}"
 
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="100">
 
-    <Border>
-        <Grid>
-            <Rectangle Width="{Binding Height}" Height="{Binding Height}" Fill="Blue" />
-        </Grid>
-    </Border>
+    <Canvas>
+        <StackPanel>
+            <Rectangle Width="{Binding Width}" Height="10" Fill="SlateGray" />
+            <Rectangle Width="{Binding Width}" Height="{Binding Height}" Fill="LightGray" />
+        </StackPanel>
+
+        <ItemsControl ItemsSource="{Binding ConnectionPoints}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemContainerStyle>
+                <Style>
+                    <Setter Property="Canvas.Left" Value="{Binding X, Mode=TwoWay}" />
+                    <Setter Property="Canvas.Top" Value="{Binding Y, Mode=TwoWay}"/>
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <ContentControl cm:View.Model="{Binding}">
+                        <b:Interaction.Behaviors>
+                            <behaviours:WireConnectionBehavior />
+                        </b:Interaction.Behaviors>
+                    </ContentControl>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+
+        
+
+    </Canvas>
 </UserControl>
