--- a/SlateBoard.App/Views/SocketView.xaml
+++ b/SlateBoard.App/Views/SocketView.xaml
@@ -12,11 +12,30 @@
              xmlns:behaviours="clr-namespace:SlateBoard.App.Behaviours">
 
 
-    <Grid cm:Message.Attach ="[Event Click] = [Action AddConnection()]">
+    <Border CornerRadius="3">
         <StackPanel Orientation="Horizontal" x:Name="SocketPanel" 
                     extensions:StackPanelExtensions.ReverseChildren="{Binding Type}">
-            <Ellipse Height="10" Width="10" Fill="DarkRed"/>
-            <Label Content="{Binding Label}"/>
+            <Ellipse x:Name="Socket" Height="10" Width="10" Fill="LightGray">
+                <Ellipse.Style>
+                    <Style TargetType="Ellipse">
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Stroke" Value="Orange"/>
+                                <Setter Property="StrokeThickness" Value="2"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="False">
+                                <Setter Property="Stroke" Value="DarkGray"/>
+                                <Setter Property="StrokeThickness" Value="2"/>
+                            </Trigger>
+                            <MultiTrigger>
+                                
+                            </MultiTrigger>
+                        </Style.Triggers>
+                    </Style>
+
+                </Ellipse.Style>
+            </Ellipse>
+            <Label Content="{Binding Label}" IsHitTestVisible="False"/>
         </StackPanel>
-    </Grid>
+    </Border>
 </UserControl>
