--- a/SlateBoard.App/Views/TerminalView.xaml
+++ b/SlateBoard.App/Views/TerminalView.xaml
@@ -10,18 +10,20 @@
              d:DataContext="{d:DesignInstance Type=viewModels:TerminalViewModel}"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="120">
-<Border>
-
-    <Border.Style>
+    <Border>
+        <Border.Style>
         <Style TargetType="Border">
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="CornerRadius" Value ="5"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="DarkGray"/>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="BorderThickness" Value="2"/>
                     <Setter Property="BorderBrush" Value="Orange"/>
                 </Trigger>
                 <Trigger Property="IsMouseOver" Value="False">
-                    <Setter Property="BorderThickness" Value="2"/>
-                    <Setter Property="BorderBrush" Value="Transparent"/>
+                    <Setter Property="BorderThickness" Value="1"/>
+                    <Setter Property="BorderBrush" Value="DarkGray"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -32,7 +34,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Row="1" Background="LightGray">
+            <Label Content="Terminal - Name"/>
+            <Grid Row="1" Background="LightGray">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="50"/>
