--- a/SlateBoard.App/Views/MainView.xaml
+++ b/SlateBoard.App/Views/MainView.xaml
@@ -40,8 +40,8 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemContainerStyle>
                 <Style>
-                    <Setter Property="Canvas.Left" Value="{Binding X, Mode=OneWay}" />
-                    <Setter Property="Canvas.Top" Value="{Binding Y, Mode=OneWay}" />
+                    <Setter Property="Canvas.Left" Value="{Binding X, Mode=TwoWay}"/>
+                    <Setter Property="Canvas.Top" Value="{Binding Y, Mode=TwoWay}" />
                 </Style>
             </ItemsControl.ItemContainerStyle>
             <ItemsControl.ItemTemplate>
