--- a/SlateBoard.App/Views/MainView.xaml
+++ b/SlateBoard.App/Views/MainView.xaml
@@ -5,16 +5,16 @@
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:cal="http://www.caliburnproject.org"
-        xmlns:behaviours="clr-namespace:SlateBoard.App.Behaviours"
         xmlns:viewModels="clr-namespace:SlateBoard.App.ViewModels"
         xmlns:backgroundGrid="clr-namespace:SlateBoard.App.BackgroundGrid"
+        xmlns:behaviors="clr-namespace:SlateBoard.App.UIElements.Behaviors"
         d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel}"
         mc:Ignorable="d"
         Title="MainView" Height="450" Width="800" TextOptions.TextRenderingMode="Aliased">
     <Grid>
         <Canvas x:Name="MainCanvas" Background="#FF3A3A3A">
             <b:Interaction.Behaviors>
-                <behaviours:CanvasPanZoomBehavior/>
+                <behaviors:CanvasPanZoomBehavior/>
             </b:Interaction.Behaviors>
  
             <ItemsControl ItemsSource="{Binding Wires}" x:Name="Wires">
@@ -27,7 +27,7 @@
                     <DataTemplate>
                         <ContentControl cal:View.Model="{Binding}" IsHitTestVisible="True">
                             <b:Interaction.Behaviors>
-                                <behaviours:DragOnCanvasBehavior />
+                                <behaviors:DragOnCanvasBehavior />
                             </b:Interaction.Behaviors>
                         </ContentControl>
                     </DataTemplate>
@@ -49,7 +49,7 @@
                     <DataTemplate>
                         <ContentControl cal:View.Model="{Binding}" IsHitTestVisible="True">
                             <b:Interaction.Behaviors>
-                                <behaviours:DragOnCanvasBehavior />
+                                <behaviors:DragOnCanvasBehavior />
                             </b:Interaction.Behaviors>
                         </ContentControl>
                     </DataTemplate>
