--- a/SlateBoard.App/Views/WireView.xaml
+++ b/SlateBoard.App/Views/WireView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SlateBoard.App.ViewModels.WireView"
+﻿<UserControl x:Class="SlateBoard.App.Views.WireView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
