--- a/SlateBoard.App/Views/MainView.xaml
+++ b/SlateBoard.App/Views/MainView.xaml
@@ -7,7 +7,7 @@
         xmlns:cal="http://www.caliburnproject.org"
         xmlns:viewModels="clr-namespace:SlateBoard.App.ViewModels"
         xmlns:backgroundGrid="clr-namespace:SlateBoard.App.BackgroundGrid"
-        xmlns:behaviors="clr-namespace:SlateBoard.App.UIElements.Behaviors"
+        xmlns:behaviors="clr-namespace:SlateBoard.App.UIComponents.Behaviors"
         d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel}"
         mc:Ignorable="d"
         Title="MainView" Height="450" Width="800" TextOptions.TextRenderingMode="Aliased">
@@ -15,8 +15,8 @@
         <Canvas x:Name="MainCanvas" Background="#FF3A3A3A">
             <b:Interaction.Behaviors>
                 <behaviors:CanvasPanZoomBehavior/>
+                <behaviors:ClearSelectionBehavior/>
             </b:Interaction.Behaviors>
- 
             <ItemsControl ItemsSource="{Binding Wires}" x:Name="Wires">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -27,13 +27,13 @@
                     <DataTemplate>
                         <ContentControl cal:View.Model="{Binding}" IsHitTestVisible="True">
                             <b:Interaction.Behaviors>
-                                <behaviors:DragOnCanvasBehavior />
+                                <behaviors:SelectionBehavior/>
                             </b:Interaction.Behaviors>
                         </ContentControl>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <ItemsControl ItemsSource="{Binding MoveableItems}" x:Name="Terminals">
+            <ItemsControl ItemsSource="{Binding Terminals}" x:Name="Terminals">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <Canvas />
@@ -50,6 +50,7 @@
                         <ContentControl cal:View.Model="{Binding}" IsHitTestVisible="True">
                             <b:Interaction.Behaviors>
                                 <behaviors:DragOnCanvasBehavior />
+                                <behaviors:SelectionBehavior/>
                             </b:Interaction.Behaviors>
                         </ContentControl>
                     </DataTemplate>
