--- a/SlateBoard.App/Views/TerminalView.xaml
+++ b/SlateBoard.App/Views/TerminalView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="SlateBoard.App.Views.TerminalView"
+<uiComponents:TerminalControl x:Class="SlateBoard.App.Views.TerminalView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,11 +6,12 @@
              xmlns:viewModels="clr-namespace:SlateBoard.App.ViewModels"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:cm="http://caliburnmicro.com"
-             xmlns:behaviors="clr-namespace:SlateBoard.App.UIElements.Behaviors"
+             xmlns:uiComponents="clr-namespace:SlateBoard.App.UIComponents"
+             xmlns:behaviors="clr-namespace:SlateBoard.App.UIComponents.Behaviors"
              d:DataContext="{d:DesignInstance Type=viewModels:TerminalViewModel}"
              mc:Ignorable="d"
-             d:DesignHeight="100" d:DesignWidth="120">
-    <Border>
+             d:DesignHeight="100" d:DesignWidth="120" IsSelected="{Binding Selected}">
+    <Border Background="LightGray">
         <Border.Style>
         <Style TargetType="Border">
                 <Setter Property="CornerRadius" Value ="5"/>
@@ -28,13 +29,13 @@
             </Style.Triggers>
         </Style>
     </Border.Style>
-        <Grid  Background="DarkGray" Opacity="0.5">
+        <Grid  Background="DarkGray" Opacity="1">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-            <Label Content="Terminal - Name"/>
+            <Label Content="{Binding Selected}"/>
             <Grid Row="1" Background="LightGray">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -61,11 +62,10 @@
                             </ContentControl>
                         </DataTemplate>
                 </ItemsControl.ItemTemplate>
-
             </ItemsControl>
 
         </Grid>
         
     </Grid>
 </Border>
-</UserControl>
+</uiComponents:TerminalControl>
