--- a/TerminalBoard.App/Views/SocketView.xaml
+++ b/TerminalBoard.App/Views/SocketView.xaml
@@ -19,14 +19,25 @@
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Stroke" Value="Orange"/>
-                                <Setter Property="StrokeThickness" Value="2"/>
+                                <Setter Property="StrokeThickness" Value="3"/>
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="False">
                                 <Setter Property="Stroke" Value="DarkGray"/>
-                                <Setter Property="StrokeThickness" Value="2"/>
+                                <Setter Property="StrokeThickness" Value="3"/>
                             </Trigger>
+                            <DataTrigger Binding="{Binding IsConnected}">
+                                <Setter Property="Fill" Value="Green"></Setter>
+                            </DataTrigger>
+
                             <MultiTrigger>
-                                
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsMouseCaptured" Value="True" />
+                                    <Condition Property="IsMouseOver" Value="True" />
+                                </MultiTrigger.Conditions>
+                                <MultiTrigger.Setters>
+                                    <Setter Property="Stroke" Value="Orange"/>
+                                    <Setter Property="StrokeThickness" Value="2"/>
+                                </MultiTrigger.Setters>
                             </MultiTrigger>
                         </Style.Triggers>
                     </Style>
