--- a/TerminalBoard.App/Views/TerminalView.xaml
+++ b/TerminalBoard.App/Views/TerminalView.xaml
@@ -1,71 +1,75 @@
 <uiComponents:TerminalControl x:Class="TerminalBoard.App.Views.TerminalView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:TerminalBoard.App.ViewModels"
-             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:cm="http://caliburnmicro.com"
-             xmlns:uiComponents="clr-namespace:TerminalBoard.App.UIComponents"
-             xmlns:behaviors="clr-namespace:TerminalBoard.App.UIComponents.Behaviors"
-             d:DataContext="{d:DesignInstance Type=viewModels:TerminalViewModel}"
-             mc:Ignorable="d"
-             d:DesignHeight="100" d:DesignWidth="120" IsSelected="{Binding Selected}">
-    <Border Background="LightGray">
-        <Border.Style>
-        <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value ="5"/>
-                <Setter Property="BorderThickness" Value="1"/>
-                <Setter Property="BorderBrush" Value="DarkGray"/>
-                <Style.Triggers>
+                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                              xmlns:cm="http://caliburnmicro.com"
+                              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+                              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                              xmlns:uiComponents="clr-namespace:TerminalBoard.App.UIComponents"
+                              xmlns:behaviors="clr-namespace:TerminalBoard.App.UIComponents.Behaviors"
+                              xmlns:viewModels="clr-namespace:TerminalBoard.App.ViewModels"
+                              d:DataContext="{d:DesignInstance Type=viewModels:TerminalViewModel}"
+                              mc:Ignorable="d"
+                              d:DesignHeight="100" d:DesignWidth="120" IsSelected="{Binding Selected}">
+        <Border x:Name="ContentBorder" Background="LightGray">
+            <Border.Effect>
+                <DropShadowEffect Opacity="0.25" ShadowDepth="3"/>
+            </Border.Effect>
+            <Border.Style>
+                <Style TargetType="Border">
+                <Setter Property="CornerRadius" Value="5,0,5,0" />
+                    <Setter Property="BorderThickness" Value="3" />
+                    <Setter Property="Padding" Value="3" />
+                    <Setter Property="BorderBrush" Value="DarkGray" />
+                    <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="BorderThickness" Value="2"/>
-                    <Setter Property="BorderBrush" Value="Orange"/>
-                </Trigger>
-                <Trigger Property="IsMouseOver" Value="False">
-                    <Setter Property="BorderThickness" Value="1"/>
-                    <Setter Property="BorderBrush" Value="DarkGray"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-    </Border.Style>
-        <Grid  Background="DarkGray" Opacity="1">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+                        <Setter Property="BorderBrush" Value="DarkOrange" />
+                        </Trigger>
+                        <DataTrigger Binding="{Binding Selected}" Value="True">
+                            <Setter Property="BorderBrush" Value="LightSkyBlue" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+            <Grid Opacity="1" x:Name="ContentGrid">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Border Background="DarkGray" CornerRadius="5,0,0,0">
+                    <Label Content="{Binding Selected}" />
+                </Border>
 
-            <Label Content="{Binding Selected}"/>
-            <Grid Row="1" Background="LightGray">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
-            <!--TEMPORARY LISTVIEWS OF SOCKETS-->
-            <ItemsControl Grid.Column="0" ItemsSource="{Binding InputSockets}" Background="LightGray" BorderThickness="0">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <ContentControl cm:View.Model="{Binding}"/>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+                <Grid Row="1" Background="LightGray" x:Name="SocketGrid">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-            <ItemsControl Grid.Column="2" ItemsSource="{Binding OutputSockets}" Background="LightGray" BorderThickness="0">
-                <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <ContentControl cm:View.Model="{Binding}" IsHitTestVisible="True">
-                                <b:Interaction.Behaviors>
-                                    <behaviors:WireConnectionBehavior/>
-                                </b:Interaction.Behaviors>
-                            </ContentControl>
-                        </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+                    <ItemsControl x:Name="InputSockets" Grid.Column="0" ItemsSource="{Binding InputSockets}"
+                              BorderThickness="0">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <ContentControl cm:View.Model="{Binding}" />
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
 
-        </Grid>
-        
-    </Grid>
-</Border>
+                    <ItemsControl x:Name="OutputSockets" Grid.Column="2" ItemsSource="{Binding OutputSockets}"
+                              BorderThickness="0">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <ContentControl cm:View.Model="{Binding}" IsHitTestVisible="True">
+                                    <b:Interaction.Behaviors>
+                                        <behaviors:WireConnectionBehavior />
+                                    </b:Interaction.Behaviors>
+                                </ContentControl>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Grid>
+            </Grid>
+        </Border>
 </uiComponents:TerminalControl>
