--- a/TerminalBoard.App/Views/WireView.xaml
+++ b/TerminalBoard.App/Views/WireView.xaml
@@ -1,20 +1,22 @@
 ﻿<UserControl x:Class="TerminalBoard.App.Views.WireView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:TerminalBoard.App.ViewModels"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" d:DataContext="{d:DesignInstance viewModels:WireViewModel}">
     <Canvas>
-        <Path Stroke="Black" StrokeThickness="2" x:Name="WireGeometry" >
+        <Ellipse Height="6" Width="6" Fill="DarkSeaGreen" Canvas.Left="{Binding StartPoint.X}" Canvas.Top="{Binding StartPoint.Y}" Margin="-3,-3,0,0"/>
+        <Ellipse Height="6" Width="6" Fill="DarkSeaGreen" Canvas.Left="{Binding EndPoint.X}" Canvas.Top="{Binding EndPoint.Y}" Margin="-3,-3,0,0"/>
+        <Path Stroke="DarkSeaGreen" StrokeThickness="3" x:Name="WireGeometry" >
             <Path.Triggers>
                 <EventTrigger RoutedEvent="MouseEnter">
                     <BeginStoryboard>
                         <Storyboard>
-                            <ColorAnimation Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" To="Orange" Duration="0:0:0.02"/>
+                            <ColorAnimation Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" To="DarkOrange" Duration="0:0:0.02"/>
                             <DoubleAnimation Storyboard.TargetProperty="StrokeThickness" To="3" Duration="0:0:0.2"/>
                         </Storyboard>
                     </BeginStoryboard>
@@ -22,8 +24,8 @@
                 <EventTrigger RoutedEvent="MouseLeave">
                     <BeginStoryboard>
                         <Storyboard>
-                            <ColorAnimation Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" To="Black" Duration="0:0:0.2"/>
-                            <DoubleAnimation Storyboard.TargetProperty="StrokeThickness" To="2" Duration="0:0:0.2"/>
+                            <ColorAnimation Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" To="DarkSeaGreen" Duration="0:0:0.2"/>
+                            <DoubleAnimation Storyboard.TargetProperty="StrokeThickness" To="3" Duration="0:0:0.2"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
@@ -35,9 +37,9 @@
                             <PathFigure StartPoint="{Binding StartPoint}">
                                 <PathFigure.Segments>
                                     <PathSegmentCollection>
-                                        <LineSegment Point="{Binding StartExtensionPoint}"/>
-                                        <LineSegment Point="{Binding EndExtensionPoint}"/>
-                                        <LineSegment Point="{Binding EndPoint}"/>
+                                        <LineSegment Point="{Binding StartExtensionPoint}" />
+                                        <LineSegment Point="{Binding EndExtensionPoint}" />
+                                        <LineSegment Point="{Binding EndPoint}" />
                                     </PathSegmentCollection>
                                 </PathFigure.Segments>
                             </PathFigure>
